--- a/FootballMan/app/src/main/res/values/strings.xml
+++ b/FootballMan/app/src/main/res/values/strings.xml
@@ -10,6 +10,7 @@
     <string name="no_leagues">There are no added leagues</string>
     <string name="no_players">There are no added players</string>
     <string name="next">Next</string>
+    <string name="games">Games</string>
     <string name="end_first">Half-time</string>
     <string name="full_time">Full-time</string>
     <string name="start">Start</string>
