--- a/FootballMan/app/src/main/res/values/strings.xml
+++ b/FootballMan/app/src/main/res/values/strings.xml
@@ -25,4 +25,5 @@
     <string name="yellow_cards">Yellow cards</string>
     <string name="goals">Goals</string>
     <string name="export">Export data</string>
+    <string name="export_games">Export Games</string>
 </resources>
