--- a/FootballMan/app/src/main/res/values/strings.xml
+++ b/FootballMan/app/src/main/res/values/strings.xml
@@ -30,4 +30,6 @@
     <string name="delete_player">Искате ли да изтриете този играч</string>
     <string name="update_player">Искате ли да обновите този играч</string>
     <string name="autogoal">Autogoal added</string>
+    <string name="preferences_file">preferences_file</string>
+    <string name="do_you_want_to_continue_game">Do you want to continue game</string>
 </resources>
