--- a/FootballMan/app/src/main/res/values/strings.xml
+++ b/FootballMan/app/src/main/res/values/strings.xml
@@ -32,4 +32,5 @@
     <string name="autogoal">Autogoal added</string>
     <string name="preferences_file">preferences_file</string>
     <string name="do_you_want_to_continue_game">Do you want to continue game</string>
+    <string name="undo">Undo</string>
 </resources>
